clusters/cluster/apps/neuland-app/aptabase/aptabase-basic-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: aptabase-basic-auth
  namespace: neuland-app
spec:
  basicAuth:
    secret: aptabase-basic-auth
    realm: "Protected Area"
    headerField: "Authorization"
