clusters/cluster/apps/neuland-app/aptabase/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aptabase
  namespace: neuland-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aptabase
  template:
    metadata:
      labels:
        app: aptabase
    spec:
      containers:
      - name: aptabase
        image: ghcr.io/robert27/aptabase:ci-oauth-15
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
