clusters/cluster/apps/neuland-app/aptabase/clickhouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aptabase-events-db
  namespace: neuland-app
spec:
  type: ClusterIP
  selector:
    app: aptabase-events-db
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: http
    - name: native
      port: 9000
      protocol: TCP
      targetPort: native
