clusters/cluster/apps/neuland-app/aptabase/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aptabase
  namespace: neuland-app
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - analytics.eggl.one
      secretName: eggl-one-wildcard-tls
  rules:
    - host: analytics.eggl.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aptabase
                port:
                  number: 8080
